--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.1.12",
+    "@angular/animations": "^9.1.12",
     "@angular/cdk": "^10.2.6",
     "@angular/common": "~9.1.12",
     "@angular/compiler": "~9.1.12",
@@ -26,6 +26,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
     "@fortawesome/free-regular-svg-icons": "^5.13.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@service-work/is-loading": "^4.0.0",
     "@types/chart.js": "^2.9.27",
     "angular-bootstrap-md": "^10.0.0",
     "animate.css": "^4.1.1",
@@ -34,6 +35,7 @@
     "hammerjs": "^2.0.8",
     "mdbootstrap": "^4.19.1",
     "ngx-bootstrap": "^6.1.0",
+    "ngx-toastr": "^12.1.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
