--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
     "bootstrap": "^4.5.3",
     "chart.js": "^2.5.0",
     "hammerjs": "^2.0.8",
+    "isbn-validate": "^1.0.3",
     "mdbootstrap": "^4.19.1",
     "ngx-bootstrap": "^6.1.0",
     "ngx-toastr": "^12.1.0",
+    "ngx-ui-loader": "^9.1.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
